version's author is given instead.  For the full (known) list of authors along
with their complete changes, see the AUTHORS file.

-------------------------------------------------------------------------------

* Changes in Cdecl 16.5

** `decltype` declarations
Now recognizing `decltype` just to say it's not supported.


* Changes in Cdecl 16.4.1

** Fixed `make install DESTDIR=...`
Fixed `make install` of shell completion functions when setting `DESTDIR` on
the command-line.

** Better error message when expanding `__VA_*` macros
Attempting to expand either `__VA_ARGS__` or `__VA_OPT__` now says that either
is valid only in a macro definition.


* Changes in Cdecl 16.4

** Echoing commands short option
The short option for `--echo-commands` has been changed from `-O` to `-E`.

** Number help
Help now includes what a "number" is.

** Shell completion options
There are two new options: `--commands`/`-K` that prints **cdecl**'s commands
for the current language and `--options`/`-O` that prints cdecl's options.
Both are intended to aid in writing shell completion functions for **cdecl**.

** Shell completion functions
Bash and Zsh shell completion functions for **cdecl** are included under
`share` and are installed as part of `make install`.

** Improved error messages for predefined types
Improved error messages in cases involving a predefined type such as:

    cdecl> explain int int8_t
    cdecl> struct int8_t

In both cases, the error message printed now is:

    error: "int8_t" is a predefined type starting in C99


* Changes in Cdecl 16.3

** Better destructor parameter error message
Attempting either to explain or declare a destructor having a parameter list
now prints "destructors may not have parameters" explicitly.

** Defining a type more than once
If a type is defined again where the current language is older than the
language in which it was previously defined, the type's set of languages is now